--- a/Create Symbolic Link/Info.plist
+++ b/Create Symbolic Link/Info.plist
@@ -31,7 +31,7 @@
 	<key>AMDescription</key>
 	<dict>
 		<key>AMDAlert</key>
-		<string>This action will output the symbolic links it creates. Due to the nature of these links, however, some actions might still affect the original files. Test your workflow carefully if you&apos;re doing anything with the output of this action.</string>
+		<string>This action will output the symbolic links it creates. Due to the nature of these links, however, some actions might still affect the original files. Test your workflow carefully if you're doing anything with the output of this action.</string>
 		<key>AMDInput</key>
 		<string></string>
 		<key>AMDNote</key>
@@ -94,9 +94,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0.1</string>
+	<string>4.0</string>
 	<key>CFBundleVersion</key>
-	<string>2.0.1</string>
+	<string>${CURRENT_PROJECT_VERSION}</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2010–2017 Junecloud LLC</string>
 	<key>NSPrincipalClass</key>
