--- a/Hide or Show Extensions/Info.plist
+++ b/Hide or Show Extensions/Info.plist
@@ -94,9 +94,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0.1</string>
+	<string>4.0</string>
 	<key>CFBundleVersion</key>
-	<string>2.0.1</string>
+	<string>${CURRENT_PROJECT_VERSION}</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2010–2017 Junecloud LLC</string>
 	<key>NSPrincipalClass</key>
