--- a/Save for Web/Info.plist
+++ b/Save for Web/Info.plist
@@ -115,9 +115,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.0.1</string>
+	<string>4.0</string>
 	<key>CFBundleVersion</key>
-	<string>3.0.1</string>
+	<string>${CURRENT_PROJECT_VERSION}</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2006–2017 Junecloud LLC</string>
 	<key>NSPrincipalClass</key>
