--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# Xcode
-#
-build/
+# System files
+.DS_Store
+Icon[]
+
+# Xcode user settings
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -9,20 +11,7 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
+xcuserdata/
 
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-#
-#Pods/
-
-Misc
+# Misc
+/Misc
