--- a/Junecloud Toolbox/​Services/Create Clean Archive.workflow/Contents/Info.plist
+++ b/Junecloud Toolbox/​Services/Create Clean Archive.workflow/Contents/Info.plist
@@ -2,15 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleIdentifier</key>
-	<string>com.junecloud.Create-Clean-Archive.workflow</string>
 	<key>NSServices</key>
 	<array>
 		<dict>
 			<key>NSBackgroundColorName</key>
 			<string>background</string>
 			<key>NSIconName</key>
-			<string>NSActionTemplate</string>
+			<string>workflowCustomImage</string>
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
